--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -17,3 +17,14 @@
         border: 1px;
         border-color: rgba(255,255,255,1);
 }
+
+.menu-gno-box {
+        border: 1px;
+        border-color: rgba(255,255,255,1);
+        background-color: rgba(10,10,10,1);
+}
+
+.menu-gno-button-left {
+}
+
+
