--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -1,3 +1,7 @@
+.menu-main-box {
+        padding: 10px;
+}
+
 .menu-control-button {
         border: 1px;
         border-color: rgba(255,255,255,0);
