--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -24,3 +24,20 @@
         border: 1px;
         border-color: rgba(255,255,255,1);
 }
+
+#menu-name-entry {
+	padding: 5px;
+	border-radius: 4px;
+	color: rgb(128, 128, 128);
+	border: 2px solid rgba(245,245,245,0.2);
+	background-gradient-start: rgba(5,5,6,0.1);
+	background-gradient-end: rgba(254,254,254,0.1);
+	background-gradient-direction: vertical;
+	selected-color: black;
+	caret-color: rgb(128, 128, 128);
+	caret-size: 1px;
+	width: 250px;
+	height: 15px;
+	transition-duration: 300;
+	box-shadow: inset 0px 2px 4px rgba(0,0,0,0.6);
+}
