Fix removable drive.

--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -25,6 +25,10 @@
         border-color: rgba(255,255,255,1);
 }
 
+.menu-eject-button{
+        padding: 7px;
+}
+
 #menu-name-entry {
 	padding: 5px;
 	border-radius: 4px;
