--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -53,6 +53,10 @@
         padding-top: 10px;
 }
 
+.menu-search-box-whisker {
+        padding-right: 12px;
+}
+
 #menu-name-entry {
 	padding: 5px;
 	border-radius: 4px;
