--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -68,7 +68,7 @@
 	selected-color: black;
 	caret-color: rgb(128, 128, 128);
 	caret-size: 1px;
-	width: 250px;
+	/*width: 250px;*/
 	height: 15px;
 	transition-duration: 300;
 	box-shadow: inset 0px 2px 4px rgba(0,0,0,0.6);
