--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -77,6 +77,11 @@
         padding-right: 12px;
 }
 
+.menu-search-box-kicker {
+        padding-left: 10px;
+        padding-right: 10px;
+}
+
 #menu-name-entry {
 	padding: 5px;
 	border-radius: 4px;
