Fixed some minors problems.

--- a/configurableMenu@lestcape/stylesheet.css
+++ b/configurableMenu@lestcape/stylesheet.css
@@ -82,6 +82,10 @@
         padding-right: 10px;
 }
 
+.menu-system-box-whisker {
+        padding-bottom: 12px;
+}
+
 #menu-name-entry {
 	padding: 5px;
 	border-radius: 4px;
